Fix various compiler warnings https://bugs.webkit.org/show_bug.cgi?id=209438

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-03-26
Reviewed by Darin Adler.

Source/WebCore:

* dom/Element.cpp: Fix -Wunused-variable warnings.
(WebCore::Element::webAnimations const):
(WebCore::Element::cssAnimations const):
(WebCore::Element::transitions const):
(WebCore::Element::hasCompletedTransitionsForProperty const):
(WebCore::Element::hasRunningTransitionsForProperty const):
(WebCore::Element::hasRunningTransitions const):
* page/scrolling/ThreadedScrollingTree.cpp: Fix -Wunused-variable warning.
(WebCore::ThreadedScrollingTree::scrollingTreeNodeDidScroll):
* platform/network/HTTPParsers.h: Fix -Wredundant-move warning.
(WebCore::parseAccessControlAllowList):

Source/WebKit:

* UIProcess/API/C/WKPage.cpp: Suppress -Wdeprecated-declaration warnings.
(WKPageSetPageLoaderClient):
(WKPageSetPagePolicyClient):

Source/WTF:

Suppress -Wclass-memaccess warning. ConcurrentBuffer is documented to support types that are
bit-copyable but not copy-constructable. This is strange, but who am I to question it?

* wtf/ConcurrentBuffer.h:

Canonical link: https://commits.webkit.org/222564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259093 268f45cc-cd09-0410-ab3c-d52691b4dbfc